--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </center>
 
       <div class="copy_right_footer">
-        -Developed By Sahaasrra
+        By - A Sai Sahaasrra
        </div>
 
         <script src="main.js"></script>
